--- a/meshserver/DAQ/util/config.yaml
+++ b/meshserver/DAQ/util/config.yaml
@@ -1,5 +1,5 @@
 # ==============================
-# Main Configuration for SiteServer
+# Main Configuration for MeshServer
 # ==============================
 
 network:
