--- a/meshserver/requirements.txt
+++ b/meshserver/requirements.txt
@@ -12,17 +12,16 @@ idna==3.10
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 nats-py==2.10.0
-numpy==2.2.6
+#numpy==2.2.6
 psycopg2-binary==2.9.10
 pydantic==2.11.5
 pydantic_core==2.33.2
-pymongo==4.13.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
-redis==6.2.0
+#redis==4.5.5
 scipy==1.15.3
 setuptools==80.9.0
 simplejson==3.20.1
